corrected wrap on output

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ code {
 
 #calculator {
   display: grid;
-  grid-template-columns: repeat(4, 6rem);
+  grid-template-columns: repeat(4, 7rem);
   grid-template-rows: minmax(6rem, auto) repeat(5, 6rem);
   
 }
@@ -30,18 +30,22 @@ code {
   grid-column: span 2;
 }
 
-#output {
+#output {  
+  padding: 0.2rem 1rem;
   grid-column: span 4;
   background-color: rgba(0,0,0,0.75);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-end;
-  color: rgba(255,255,255,0.8);
+  color: rgba(255,255,255,0.85);
   font-size: 2rem;  
+  word-wrap: break-word;
+  word-break: break-all;
+  text-align: end;
 }
 
 #output > #prev {
   font-size: 1.6rem;
-  color: rgba(255,255,255,0.6);
+  color: rgba(255,255,255,0.65);
 }
